# LatticeQuery

./: .gitignore  CNAME  LICENSE  README.md  appveyor.yml  environment.yaml  lqgui_env.yml  pyproject.toml  run.py
Lattice scripts/: heterogeneous_lattice.py  homogeneous_lattice.py  lego_brick.py  unit_cell.py  varying_Ls.py
cq_editor/: __main__.py  cq_utils.py  icons.py  utils.py
cq_editor/widgets/: debugger.py  editor.py  object_tree.py  viewer.py
lattice_scripts/: BCC.py  BCC_heterogeneous_lattice.py  BCC_heterogeneous_lattice_v2.py  BCC_lattice.py  FBCC_heterogeneous_lattice.py  FCC_heterogeneous_lattice.py  FCC_xyz.py  adaptive_Ls.py  changing_cross_section.py  conform-surface.py  cubic.py  diamond.py  gyroid.py  gyroid_new.py  hetero-shwarz.py  heterogeneous_gyroid.py  heterogeneous_lattice.py  heterogeneous_schwartz.py  martensite.py  rco.py  reverse_gyroid.py  schwartz-d.py  simple_cubic.py  support_plate.py  t_cubic.py  tco.py  tetra_lattice.py  tire.py  tpms_test.py  tpms_transition.py  varying_Ls.py  varying_truncation.py  voronoi.py  wavy_circle.py
lq/: commons.py
lq/topologies/: conformal.py  diamond.py  fbcc.py  gyroid.py  rco.py  schwartz.py  tcubic.py  tpms_transition.py
parfunlib/: commons.py
parfunlib/martensite/: martensite.py
parfunlib/topologies/: BCC.py  FCC.py  bcc.py  bcc_old.py  cubic.py  diamond.py  fbcc.py  fcc.py  gyroid.py  martensite.py  rco.py  schwartz.py  tco.py  tcubic.py  tpms_transition.py
topologies/: fblgen_helper.py
topologies/BCC/: unit_cell.py
